# reason-i18n-extractor

./: HISTORY.md  README.md  azure-pipelines.yml  dune-project  package.json
.ci/: build-platform.yml  cross-release.yml  pipelines-release.js  release-postinstall.js
.ci/utils/: publish-build-cache.yml  restore-build-cache.yml
esy.lock/: index.json
lib/: Extractor.re  Migrate.re  Translations.re  dune
test/__snapshots__/: Translations.142403bb.0.snapshot  Translations.904181e7.0.snapshot
test/cases/: App.re  translations.json
test/lib/: ExtractorTests.re  GetProjectRoot.re  RunTests.re  TestFramework.re  TranslationsTests.re  dune
